refactor(ticket-service): 清理冗余代码并现代化集合 API 调用
- AuditLogAspect 添加 Objects.requireNonNull 空安全防护
- Stream collect(Collectors.toList()) 替换为 toList()
- List.get(0) 替换为 getFirst()
- 移除 AdminOrderServiceImpl 未使用的 CryptoUtil 依赖
- 移除测试类中同包冗余 import